# personal-website

./: README.md  package-lock.json
client/: package.json  quasar.config.js
server/: Cargo.toml  build.sh  run.sh
server/.cargo/: config.toml
server/src/: main.rs
